@@ -7,10 +7,6 @@
 	<file name="$sourcedir/Profile-Modify.php">
 
 		<operation>
-			<search position="replace"><![CDATA[			'options' => 'Global $tea; if($modSettings["tea_corptag_options"] == 2) $ticker = TRUE; return $tea -> get_char_list(FALSE, $ticker);',]]></search>
-			<add><![CDATA[			'options' => 'Global $tea; if($modSettings["tea_custom_name"]) $format = TRUE; return $tea -> get_char_list(FALSE, $format);',]]></add>
-		</operation>
-		<operation>
 			<search position="replace"><![CDATA[	global $tea, $teats;
 	if($_GET['sa'] == 'ts')
 	{
